--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .vscode
 __pycache__
 venv
+node_modules
 
 # OS generated files #
 ######################
@@ -11,3 +12,5 @@ venv
 .Trashes
 ehthumbs.db
 Thumbs.db
+env.sh
+env_test.sh
